--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ chardet==4.0.0
 click==8.0.1
 dataclasses==0.8
 Flask==2.0.1
+flask-marshmallow==0.14.0
 Flask-Migrate==3.0.1
 Flask-RESTful==0.3.9
 Flask-Script==2.0.6
@@ -16,6 +17,8 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 Mako==1.1.4
 MarkupSafe==2.0.1
+marshmallow==3.12.1
+marshmallow-sqlalchemy==0.26.1
 pkg-resources==0.0.0
 psycopg2-binary==2.9.1
 PyJWT==2.1.0
