--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Mako==1.1.4
 MarkupSafe==2.0.1
 marshmallow==3.12.1
 marshmallow-sqlalchemy==0.26.1
+pkg-resources==0.0.0
 psycopg2-binary==2.9.1
 PyJWT==2.1.0
 python-dateutil==2.8.1
